[package]
name = "entconn"
version = "0.1.0"
edition = "2021"
author = "Christopher Guay"
description = "A simple cli that let's you connect to standard enterprise wifi network."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.1", features = ["derive"]}
